--- a/templateLaTeX-Rom/thesis.bib
+++ b/templateLaTeX-Rom/thesis.bib
@@ -25,3 +25,37 @@ month={March},}
     number = {3},
     doi = {10.1371/journal.pmed.0050006}
 }
+
+@book{bndef,
+ author = {Lewis, Lundy},
+ title = {Managing Business and Service Networks},
+ year = {2001},
+ isbn = {0306465590},
+ publisher = {Kluwer Academic Publishers},
+ address = {Norwell, MA, USA}
+} 
+
+@online{fabricdoc,
+  author = {Hyperledger},
+  title = {{Hyperledger Fabric} Documentation},
+  year = 2018,
+  url = {http://hyperledger-fabric.readthedocs.io/en/latest/},
+  urldate = {2018-04-06}
+}
+
+@book{p2p,
+ author = {Davison, Andrew},
+ title = {Killer Game Programming in Java},
+ year = {2005},
+ isbn = {0596007302},
+ pages = {680-690},
+ publisher = {O'Reilly Media, Inc.}
+} 
+
+@MISC{bitcoin,
+    author = {Satoshi Nakamoto},
+    title = {Bitcoin: A peer-to-peer electronic cash system,” http://bitcoin.org/bitcoin.pdf},
+    year = {}
+}
+
+
